fix: start duckstation-mini

--- a/board/reglinux/linux-defconfig-reglinux.config
+++ b/board/reglinux/linux-defconfig-reglinux.config
@@ -205,3 +205,5 @@ CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
 CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
+CONFIG_AUTOFS_FS=y
+CONFIG_FUSE_FS=y
