--- a/board/broadcom/bcm2711/linux-broadcom64-current.config
+++ b/board/broadcom/bcm2711/linux-broadcom64-current.config
@@ -8177,7 +8177,7 @@ CONFIG_QFMT_V1=m
 CONFIG_QFMT_V2=m
 CONFIG_QUOTACTL=y
 CONFIG_AUTOFS_FS=y
-CONFIG_FUSE_FS=m
+CONFIG_FUSE_FS=y
 CONFIG_CUSE=m
 # CONFIG_VIRTIO_FS is not set
 CONFIG_FUSE_PASSTHROUGH=y
