--- a/board/mediatek/mt8395/linux-defconfig.config
+++ b/board/mediatek/mt8395/linux-defconfig.config
@@ -10229,7 +10229,7 @@ CONFIG_QUOTA_TREE=y
 CONFIG_QFMT_V2=y
 CONFIG_QUOTACTL=y
 CONFIG_AUTOFS_FS=y
-CONFIG_FUSE_FS=m
+CONFIG_FUSE_FS=y
 CONFIG_CUSE=m
 # CONFIG_VIRTIO_FS is not set
 CONFIG_FUSE_PASSTHROUGH=y
