Fix azahar + 86Box, bump ares and cemu

--- a/package/emulators/86Box/Config.in
+++ b/package/emulators/86Box/Config.in
@@ -4,6 +4,7 @@ config BR2_PACKAGE_86BOX
     select BR2_PACKAGE_LIBSNDFILE
     select BR2_PACKAGE_SLIRP
     select BR2_PACKAGE_OPENAL
+    select BR2_PACKAGE_SDL2
   
     help
       86Box
