--- a/package/emulationstation/es-system/es_systems.yml
+++ b/package/emulationstation/es-system/es_systems.yml
@@ -4140,8 +4140,8 @@ switch:
   theme: switch
   extensions: [xci, nsp]
   emulators:
-    citron:
-      citron: { requireAnyOf: [BR2_PACKAGE_CITRON] }
+    eden:
+      eden: { requireAnyOf: [BR2_PACKAGE_EDEN] }
     ryujinx:
       ryujinx: { requireAnyOf: [BR2_PACKAGE_RYUJINX] }
 
