--- a/package/system/reglinux-configgen/configs/configgen-defaults.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults.yml
@@ -582,8 +582,8 @@ supervision:
   emulator: libretro
   core:     potator
 switch:
-  emulator: citron
-  core:     citron
+  emulator: eden
+  core:     eden
   options:
     hud_support: false
 systemsp:
