--- a/package/system/reglinux-configgen/configs/configgen-defaults-rk3326.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-rk3326.yml
@@ -10,10 +10,10 @@ fmtowns:
   core:     mame
 atomiswave:
   emulator: libretro
-  core:     flycastvl
+  core:     morpheuscast-xtreme
 dreamcast:
   emulator: libretro
-  core:     flycastvl
+  core:     morpheuscast-xtreme
 naomi:
   emulator: libretro
-  core:     flycastvl
+  core:     morpheuscast-xtreme
