--- a/package/system/reglinux-configgen/configs/configgen-defaults-h3.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-h3.yml
@@ -1,51 +1,9 @@
-default:
-  options:
-    video_threaded: true
-    smooth: false
-    retroarch.menu_driver: xmb
-    retroarch.audio_driver: alsathread
-
-mastersystem:
-  emulator: libretro
-  core:     picodrive
-megadrive:
-  emulator: libretro
-  core:     picodrive
-snes:
-  emulator: libretro
-  core:     snes9x
-c64:
-  emulator: libretro
-  core:     vice_x64
-c20:
-  emulator: libretro
-  core:     vice_xvic
-c128:
-  emulator: libretro
-  core:     vice_x128
-cplus4:
-  emulator: libretro
-  core:     vice_xplus4
-pet:
-  emulator: libretro
-  core:     vice_xpet
-fbneo:
-  options:
-    frameskip: auto
-fmtowns:
-  emulator: libretro
-  core:     mame
 atomiswave:
   emulator: libretro
-  core:     flycast
+  core:     morpheuscast-xtreme
 dreamcast:
   emulator: libretro
-  core:     flycast
+  core:     morpheuscast-xtreme
 naomi:
   emulator: libretro
-  core:     flycast
-n64:
-  options:
-flash:
-  emulator: lightspark
-  core:     lightspark
+  core:     morpheuscast-xtreme
