Some build fixes, OpenMoHAA + minor bumps

--- a/Config.in
+++ b/Config.in
@@ -231,6 +231,7 @@ menu "Ports"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/jazz2-native/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/openjazz/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/openlara/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/openmohaa/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/openmw/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/raze/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/sonic2013/Config.in"
