--- a/package/emulators/dolphin-triforce/Config.in
+++ b/package/emulators/dolphin-triforce/Config.in
@@ -13,6 +13,8 @@ config BR2_PACKAGE_DOLPHIN_TRIFORCE
 	select BR2_PACKAGE_SPEEXDSP
 	select BR2_PACKAGE_XZ
 	select BR2_PACKAGE_ZLIB
+	select BR2_PACKAGE_MINIZIP_ZLIB
+	select BR2_PACKAGE_PUGIXML
 	help
 	  TriForce (Dolphin-5.0 based) arcade emulator
 
