--- a/package/emulators/gopher64/Config.in
+++ b/package/emulators/gopher64/Config.in
@@ -8,6 +8,8 @@ config BR2_PACKAGE_GOPHER64
 	depends on BR2_PACKAGE_ALSA_LIB
 	depends on BR2_PACKAGE_HAS_LIBGL
 	depends on BR2_PACKAGE_XWAYLAND
+	depends on BR2_PACKAGE_VULKAN_HEADERS
+	depends on BR2_PACKAGE_VULKAN_LOADER
 
 	help
 	N64 emulator written in Rust
