es: added gamecontrollerdb as a dependency

--- a/package/emulationstation/reglinux-emulationstation/Config.in
+++ b/package/emulationstation/reglinux-emulationstation/Config.in
@@ -5,6 +5,7 @@ config BR2_PACKAGE_REGLINUX_EMULATIONSTATION
 	select BR2_PACKAGE_SDL3_MIXER
 	select BR2_PACKAGE_ALSA_LIB
 	select BR2_PACKAGE_ALSA_UTILS_AMIXER
+	select BR2_PACKAGE_GAMECONTROLLERDB
 	depends on (BR2_PACKAGE_HAS_LIBGLES || BR2_PACKAGE_HAS_LIBGL)
 	select BR2_PACKAGE_LIBFREEIMAGE
 	select BR2_PACKAGE_FREETYPE
