buildroot: update files custom

--- a/custom/package/Config.in
+++ b/custom/package/Config.in
@@ -331,8 +331,7 @@ comment "Graphic applications"
 	source "package/pngquant/Config.in"
 	source "package/qt5cinex/Config.in"
 	source "package/rrdtool/Config.in"
-	# reglinux - add spirv-llvm-translator
-	source "package/spirv-llvm-translator/Config.in"
+	source "package/spirv-llvm-translator/Config.in" # reglinux - add spirv-llvm-translator
 	source "package/spirv-tools/Config.in"
 	source "package/stellarium/Config.in"
 	source "package/sway/Config.in"
@@ -1610,7 +1609,6 @@ menu "Crypto"
 	source "package/libmd/Config.in"
 	source "package/libmhash/Config.in"
 	source "package/libnss/Config.in"
-	source "package/libolm/Config.in"
 	source "package/libp11/Config.in"
 	source "package/libscrypt/Config.in"
 	source "package/libsecret/Config.in"
@@ -2095,7 +2093,6 @@ menu "Networking"
 	source "package/libutp/Config.in"
 	source "package/libuwsc/Config.in"
 	source "package/libvncserver/Config.in"
-	source "package/libwebsock/Config.in"
 	source "package/libwebsockets/Config.in"
 	source "package/libyang/Config.in"
 	source "package/libzenoh-c/Config.in"
