--- a/package/system/reglinux-configgen/configs/configgen-defaults-bcm2836.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-bcm2836.yml
@@ -18,13 +18,13 @@ psx:
     gfxbackend: Software
 atomiswave:
   emulator: libretro
-  core:     morpheuscast-xtreme
+  core:     km_morpheuscast_xtreme
 dreamcast:
   emulator: libretro
-  core:     morpheuscast-xtreme
+  core:     km_morpheuscast_xtreme
 naomi:
   emulator: libretro
-  core:     morpheuscast-xtreme
+  core:     km_morpheuscast_xtreme
 c64:
   emulator: libretro
   core:     vice_x64
