--- a/package/system/reglinux-configgen/configs/configgen-defaults-h3.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-h3.yml
@@ -1,9 +1,9 @@
 atomiswave:
   emulator: libretro
-  core:     morpheuscast-xtreme
+  core:     km_morpheuscast_xtreme
 dreamcast:
   emulator: libretro
-  core:     morpheuscast-xtreme
+  core:     km_morpheuscast_xtreme
 naomi:
   emulator: libretro
-  core:     morpheuscast-xtreme
+  core:     km_morpheuscast_xtreme
