--- a/package/system/reglinux-configgen/configs/configgen-defaults-bcm2837.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-bcm2837.yml
@@ -14,13 +14,13 @@ psx:
     gfxbackend: Software
 atomiswave:
   emulator: libretro
-  core:     flycastvl
+  core:     km_morpheuscast_xtreme
 dreamcast:
   emulator: libretro
-  core:     flycastvl
+  core:     km_morpheuscast_xtreme
 naomi:
   emulator: libretro
-  core:     flycastvl
+  core:     km_morpheuscast_xtreme
 flash:
   emulator: lightspark
   core:     lightspark
