--- a/package/system/reglinux-configgen/configgen/pyproject.toml
+++ b/package/system/reglinux-configgen/configgen/pyproject.toml
@@ -15,6 +15,10 @@ dependencies = [
     "configobj>=5.0.6",
     "requests>=2.22.0",
     "toml>=0.10.2",
+    "Pillow>=11.3.0",
+    "evdev>=1.9.2",
+    "pyudev>=0.24.3",
+    "ruamel.yaml>=0.18.15",
 ]
 
 [tool.setuptools.packages.find]
