--- a/package/emulationstation/es-system/es_systems.yml
+++ b/package/emulationstation/es-system/es_systems.yml
@@ -5526,8 +5526,8 @@ jazz2:
   platform: pc
   group: ports
   emulators:
-    jazz2-native:
-      jazz2-native: { requireAnyOf: [BR2_PACKAGE_JAZZ2_NATIVE] }
+    jazz2:
+      jazz2: { requireAnyOf: [BR2_PACKAGE_JAZZ2_NATIVE] }
   comment_en: |
     Jazz2 Native requires the original Jazz Jackrabbit 2 game files.
     Copy all game files into this directory.
