--- a/package/emulators/shadps4/Config.in
+++ b/package/emulators/shadps4/Config.in
@@ -6,7 +6,7 @@ config BR2_PACKAGE_SHADPS4
     select BR2_PACKAGE_PULSEAUDIO
     select BR2_PACKAGE_OPENAL
     select BR2_PACKAGE_OPENSSL
-    select BR2_PACKAGE_LIBZLIB
+    select BR2_PACKAGE_ZLIB
     select BR2_PACKAGE_LIBEDIT
     select BR2_PACKAGE_UDEV
     select BR2_PACKAGE_LIBEVDEV
