configgen: rename reglinux

--- a/package/system/reglinux-configgen/configgen/configgen/generators/xash3d_fwgs/gamepad.cfg
+++ b/package/system/reglinux-configgen/configgen/configgen/generators/xash3d_fwgs/gamepad.cfg
@@ -1,7 +1,7 @@
 // Default gamepad bindings
 
 // == Bindings ==
-// Same as this illustration except the SELECT + combinations that are different and follow Batocera conventions:
+// Same as this illustration except the SELECT + combinations that are different and follow REG-Linux conventions:
 // https://raw.githubusercontent.com/krishenriksen/Half-Life-rg351p/da77c22b60c29589240b86608495574672105206/Half-Life/controls.png
 //
 // Left stick: Move/Strafe (Walk instead of run when pressed)
