Services to enable/disable NFS, SAMBA, SSH, SWAP
- NFS (disabled by default)
Fixed config; connect with nfs://REGLINUX.local/userdata or nfs://__IP__/userdata

- SAMBA (enabled by default)

- SSH (enabled by default)

- SWAP (disabled by default)
If a swap partition is found, it is mounted, if not a file is used (/userdata/system/swapfile).

--- a/package/system/reglinux-system/system.conf
+++ b/package/system/reglinux-system/system.conf
@@ -6,7 +6,7 @@ system.security.enabled=0
 
 ## Services
 # exampe: system.services=service1 service2
-#system.services=
+system.services=enable_SAMBA enable_SSH
 
 ## Display rotation
 ## Leave commented out -> Auto.
@@ -92,11 +92,17 @@ wifi.enabled=0
 #wifi.hidden.ssid=hidden SSID
 #wifi.hidden.key=new key
 
-## Disable Samba share, see https://wiki.batocera.org/add_games_bios#while_batocera_is_running
-#system.samba.enabled=0
+## Enable/Disable NFS share
+# default is disabled
+system.nfs.enabled=0
 
-## Disable SSH, see https://wiki.batocera.org/access_the_batocera_via_ssh
-#system.ssh.enabled=0
+## Enable/Disable Samba share
+# default is enabled
+system.samba.enabled=1
+
+## Enable/Disable SSH
+# default is enabled
+system.ssh.enabled=1
 
 
 # ------------ C - Audio ------------ #
