--- a/package/system/reglinux-configgen/configs/configgen-defaults-x86_64.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-x86_64.yml
@@ -5,120 +5,123 @@ default:
 
 pcengine:
   emulator: libretro
-  core:     pce
+  core: pce
 pcenginecd:
   emulator: libretro
-  core:     pce
+  core: pce
 saturn:
   emulator: libretro
-  core:     beetle-saturn
+  core: beetle-saturn
 sgb:
   emulator: libretro
-  core:     mesen-s
+  core: mesen-s
 lcdgames:
   emulator: mame
-  core:     mame
+  core: mame
 cdi:
   emulator: mame
-  core:     mame
+  core: mame
 advision:
   emulator: mame
-  core:     mame
+  core: mame
 #triforce:
 #  emulator: dolphin-triforce
 #  core:     dolphin-triforce
 plugnplay:
   emulator: mame
-  core:     mame
+  core: mame
 megaduck:
   emulator: mame
-  core:     mame
+  core: mame
 pdp1:
   emulator: mame
-  core:     mame
+  core: mame
 pv1000:
   emulator: mame
-  core:     mame
+  core: mame
 gamate:
   emulator: mame
-  core:     mame
+  core: mame
 crvision:
   emulator: mame
-  core:     mame
+  core: mame
 gamecom:
   emulator: mame
-  core:     mame
+  core: mame
 fm7:
   emulator: mame
-  core:     mame
+  core: mame
 gamepock:
   emulator: mame
-  core:     mame
+  core: mame
 apfm1000:
   emulator: mame
-  core:     mame
+  core: mame
 bbc:
   emulator: mame
-  core:     mame
+  core: mame
 adam:
   emulator: mame
-  core:     mame
+  core: mame
 arcadia:
   emulator: libretro
-  core:     mame
+  core: mame
   options:
     sharemameart: 0
 gmaster:
   emulator: mame
-  core:     mame
+  core: mame
 astrocde:
   emulator: mame
-  core:     mame
+  core: mame
 ti99:
   emulator: mame
-  core:     mame
+  core: mame
 tutor:
   emulator: mame
-  core:     mame
+  core: mame
 coco:
   emulator: mame
-  core:     mame
+  core: mame
 macintosh:
   emulator: mame
-  core:     mame
+  core: mame
 archimedes:
   emulator: mame
-  core:     mame
+  core: mame
 socrates:
   emulator: mame
-  core:     mame
+  core: mame
 supracan:
   emulator: mame
-  core:     mame
+  core: mame
 vsmile:
   emulator: mame
-  core:     mame
+  core: mame
 xegs:
   emulator: mame
-  core:     mame
+  core: mame
 atom:
   emulator: mame
-  core:     mame
+  core: mame
 electron:
   emulator: mame
-  core:     mame
+  core: mame
 camplynx:
   emulator: mame
-  core:     mame
+  core: mame
 vc4000:
   emulator: mame
-  core:     mame
+  core: mame
 gp32:
   emulator: mame
-  core:     mame
+  core: mame
 laser310:
   emulator: mame
-  core:     mame
+  core: mame
 jaguar:
   emulator: bigpemu
-  core:     bigpemu
+  core: bigpemu
+jaguarcd:
+  emulator: bigpemu
+  core: bigpemu
