zramswap: define size/algorithm in system.conf

--- a/package/system/reglinux-system/system.conf
+++ b/package/system/reglinux-system/system.conf
@@ -5,8 +5,17 @@
 system.security.enabled=0
 
 ## Services
-# exampe: system.services=service1 service2
+# example: system.services=service1 service2
 system.services=enable_SAMBA enable_SSH
+
+## Set parameters for ZRAMSWAP service
+# default is to use 20% of total RAM (=0.2)
+services.zramswap.sizefactor=0.2
+# Compression algorithms prioritized for performance on weak hardware
+# LZ4 is fastest, LZO is second choice, avoid ZSTD/DEFLATE on low-end systems
+# Powerfull devices can use "zstd lzo lz4" for better compression
+# default is "lz4 lzo"
+services.zramswap.algorithms=lz4 lzo
 
 ## Display rotation
 ## Leave commented out -> Auto.
