--- a/board/reglinux/linux-defconfig-reglinux.config
+++ b/board/reglinux/linux-defconfig-reglinux.config
@@ -116,11 +116,11 @@ CONFIG_USB_PULSE8_CEC=m
 #
 # SMB server
 #
-CONFIG_SMB_SERVER=y
+CONFIG_SMB_SERVER=m
 CONFIG_SMB_SERVER_CHECK_CAP_NET_ADMIN=y
 # CONFIG_SMB_SERVER_KERBEROS5 is not set
 # CONFIG_SMB_SERVER_SMBDIRECT is not set
-CONFIG_SMBFS=y
+CONFIG_SMBFS=m
 CONFIG_CIFS=m
 CONFIG_CIFS_STATS=y
 # CONFIG_CIFS_STATS2 is not set
@@ -129,7 +129,7 @@ CONFIG_CIFS_UPCALL=y
 CONFIG_CIFS_XATTR=y
 CONFIG_CIFS_POSIX=y
 CONFIG_CIFS_ACL=y
-CONFIG_CIFS_DEBUG=y
+# CONFIG_CIFS_DEBUG is not set
 # CONFIG_CIFS_DEBUG2 is not set
 # CONFIG_CIFS_DEBUG_DUMP_KEYS is not set
 CONFIG_CIFS_DFS_UPCALL=y
